fixed missing line wrap in footer

--- a/main.css
+++ b/main.css
@@ -50,11 +50,11 @@ body {
     padding: 20px;
     display: flex;
     align-items: center;
-    gap: 20px;
 }
 .footer img {
     width: 40px;
     height: 40px;
 }
 .footer p {
+    margin: 20px;
 }
